feat(subscription_event.rb): Adiciona histórico de assinaturas + teste + renovação de mais de um mês
