# app/models/subscription_event.rb
@@ -1,0 +1,7 @@
+class SubscriptionEvent < ApplicationRecord
+  belongs_to :subscription
+
+  validates :name, presence: true
+  validates :description, presence: true
+  validates :event_type, presence: true
+end
